# MagicCube

./: .gitignore  CMakeLists.txt  axis_shader.frag  axis_shader.vert  main.cpp  res.qrc  shader.frag  shader.vert  ug_axis.cpp  ug_axis.h  ug_config.h  ug_cube.cpp  ug_cube.h  ug_httpserver.cpp  ug_httpserver.h  ug_magiccube.cpp  ug_magiccube.h  ug_mainwindow.cpp  ug_mainwindow.h  ug_modbustcp.cpp  ug_modbustcp.h  ug_openglwidget.cpp  ug_openglwidget.h  ug_panel.cpp  ug_panel.h
py_test/: modbus_client.py  modbus_server.py
